# iShuttle

./: .gitignore  CONTEXT.md  commit.bat  debug_git.bat  test_ssh.bat
backend/: README.md  Spec.md  main.py  pyproject.toml
backend/api/: analyze.py  feedback.py  report.py  results.py
backend/models/TrackNetV3/: predict.py
backend/pipeline/: __init__.py  court.py  editor.py  formation.py  game_rules.py  heatmap.py  pose.py  rally.py  reporter.py  tracker.py
backend/tests/: test_api.py  test_game_rules.py  test_heatmap.py  test_pipeline.py  test_pipeline_e2e.py  test_pose_calc.py  test_rally_result.py  test_reporter.py
frontend/: Spec.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: bookmarkStore.test.ts  gameStore.test.ts  jobStore.test.ts  progressSync.test.ts  results.test.ts  scoreRally.test.ts
frontend/src/api/: analyze.ts  client.ts  feedback.ts  mock.ts  report.ts  results.ts
frontend/src/components/: Heatmap.tsx  ProgressBar.tsx  RallyCard.tsx  (+2 more)
work/: DONE.md  Workflow.md
work/done/: BE_003_TrackNetV3_통합.md  BE_004_MediaPipe_API_업데이트.md  BE_005_ffmpeg_Windows_설치.md  BE_006_짧은클립_지원.md  BE_007_신고_엔드포인트.md  FE_003_결과화면_렌더링.md  FE_004_랠리북마크.md  FE_005_연습모드.md  FE_006_업로드_스냅샷_팀지정.md  FE_007_랠리_신고버튼.md
work/tasks/: BE_001_백엔드_스캐폴딩.md  BE_003_TrackNetV3_통합.md  BE_004_MediaPipe_API_업데이트.md  BE_005_ffmpeg_Windows_설치.md  BE_006_짧은클립_지원.md  BE_007_신고_엔드포인트.md  FE_001_프론트엔드_스캐폴딩.md  FE_003_결과화면_렌더링.md  FE_004_랠리북마크.md  FE_005_연습모드.md  FE_006_업로드_스냅샷_팀지정.md  FE_007_랠리_신고버튼.md
(+12 files in other folders)
